# SemesterProject3.0

./: .gitignore
Programmering/: CMakeLists.txt  DataInd.cpp  DtmfFinder.cpp  TextBehandling.cpp  TextHandler.cpp  TextHandler.h  TextTilHex.cpp  main.cpp  mainPlotDFT  sound.cpp  sound.h
Programmering/CSMAca/: CSMAca (1).VC.VC.opendb  CSMAca (1).sln
Programmering/CSMAca/=Noter=/: Jeppe.txt  Vector buffer.txt
Programmering/CSMAca/CSMAca/: CSMAca.vcxproj.filters  Source.cpp  csmaCA.cpp  csmaCA.h  csmaCA[Conflict].h
Programmering/CSMAca/Debug/: CSMAca.ilk
Programmering/CustomRecorder/: CustomRecorder.cpp  CustomRecorder.h  rekonstruktion
Programmering/DFT/: DFT.cpp  DFT.h
Programmering/DtmfFinder/: DtmfFinder.cpp  DtmfFinder.h  DtmfFinderNew
Programmering/Frame/FlagSetTest/Flag/: CMakeLists.txt  Frame.cpp  main.cpp
Programmering/Frame/Frame/: Frame.cpp  Frame.h
Programmering/Frame/Frame/Clion/: CMakeLists.txt
Programmering/Sound/: ToneFade  sound.cpp  sound.h
Programmering/TextHandler/: TextHandler.cpp  TextHandler.h
Programmering/TextHandler/ConsoleApplication1/: ConsoleApplication1.sln
Programmering/TextHandler/ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.vcxproj
Programmering/TextHandler/ConsoleApplication1/Debug/: ConsoleApplication1.ilk
Programmering/TextHandler/TextHandler/: TextHandler.VC.VC.opendb  TextHandler.sln
Programmering/TextHandler/TextHandler/Debug/: TextHandler.ilk
Programmering/TextHandler/TextHandler/TextHandler/: Test.cpp  TextHandler.cpp  TextHandler.h  (+2 more)
Programmering/cmake_modules/: FindSFML.cmake
(+46 files in other folders)
